# myutils

./: .gitignore  README.md  pyproject.toml
myutils/: args_viewer.py  file_finder.py  text_maker.py  timer.py
tests/myutils/: test_args_viewer.py  test_file_finder.py  test_text_maker.py  test_timer.py
